k8s_dep/4.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanslate-db
spec:
  selector:
    matchLabels:
      app: cleanslate-db
  replicas: 1
  template:
    metadata:
      labels:
        app: cleanslate-db
    spec:
      serviceAccountName: xlp-mariadb
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 3000
      #   fsGroup: 2000
      containers:
        - name: cleanslate-db-container
          image: mariadb:10.3
          ports:
            - containerPort: 3306
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: cleanslate-db-storage
      volumes:
        - name: cleanslate-db-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
