k8s_dep/6.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanslate-app
spec:
  selector:
    matchLabels:
      app: cleanslate-app
  replicas: 1
  template:
    metadata:
      labels:
        app: cleanslate-app
    spec:
      containers:
        - name: cleanslate-container
          # image: mediawiki
          # image: runtimeerror2/xlpmediawiki:1.33-amd64-basic
          image: xlp0/semanticwiki
          # image: runtimeerror2/xlpmediawiki:1.33-amd64-basic
          volumeMounts:
            - mountPath: /var/www/html/images
              name: cleanslate-volume
            - mountPath: /var/www/html/LocalSettings.php
              name: cleanslate-localsettings
            - mountPath: /var/www/html/images_restore
              name: cleanslate-restore
          ports:
            - containerPort: 80
      volumes:
        - name: cleanslate-volume
          persistentVolumeClaim:
            claimName: media-pv-claim
        - name: cleanslate-localsettings
          hostPath:
            # path: /home/ubuntu/mount/mountPoint/LocalSettings.php
            # path: /efs/data/xlp_k8s/mediawiki/LocalSettings.php
            path: /efs/mount/mediawiki/LocalSettings.php
            type: File
        - name: cleanslate-restore
          hostPath:
            path: /efs/mount/mediawiki/images_restore
