k8s_dep/5.yml
apiVersion: v1
kind: Service
metadata:
  name: cleanslate-db-srv
  labels:
    app: cleanslate-db
spec:
  # type: NodePort
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: cleanslate-db
  clusterIP: 10.97.75.132
