k8s_dep/7.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: cleanslate-srv
#   labels:
#     app: cleanslate-app
# spec:
#   type: LoadBalancer
#   externalIPs:
#   - 52.12.163.222
#   ports:
#     - port: 80
#       protocol: TCP
#       targetPort: 80                    # target port where server is listening
#       nodePort: 30000     # valid port to expose is 30k UP
#   selector:
#     app: cleanslate-app
apiVersion: v1
kind: Service
metadata:
  name: cleanslate-srv
  labels:
    app: cleanslate-app
spec:
  type: NodePort
  # ports:
  #   - port: 80
  #     protocol: TCP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80                    # target port where server is listening
      nodePort: 30000     # valid port to expose is 30k UP
  selector:
    app: cleanslate-app
