k8s_dep/clean_slate_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanslate-app
spec:
  selector:
    matchLabels:
      app: cleanslate-app
  replicas: 1
  template:
    metadata:
      labels:
        app: cleanslate-app
    spec:
      containers:
        - name: cleanslate-container
          image: mediawiki
          volumeMounts:
            - mountPath: /var/www/html/images
              name: cleanslate-volume
            - mountPath: /var/www/html/LocalSettings.php
              name: cleanslate-localsettings
          ports:
            - containerPort: 80
      volumes:
        - name: cleanslate-volume
        - name: cleanslate-localsettings
          hostPath:
            path: /home/docker/mount/LocalSettings.php
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: cleanslate-srv
  labels:
    app: cleanslate-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80      # target port where server is listening
      nodePort: 30000     # valid port to expose is 30k UP
  selector:
    app: cleanslate-app
