k8s_dep/clean_slate_exec.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanslate-db
spec:
  selector:
    matchLabels:
      app: cleanslate-db
  replicas: 1
  template:
    metadata:
      labels:
        app: cleanslate-db
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: cleanslate-db-container
          image: mariadb
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: cleanslate-db-storage
      volumes:
        - name: cleanslate-db-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: cleanslate-db-srv
  labels:
    app: cleanslate-db
spec:
  type: NodePort
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: cleanslate-db
  clusterIP: 10.97.75.132
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanslate-app
spec:
  selector:
    matchLabels:
      app: cleanslate-app
  replicas: 1
  template:
    metadata:
      labels:
        app: cleanslate-app
    spec:
      containers:
        - name: cleanslate-container
          image: mediawiki
          volumeMounts:
            - mountPath: /var/www/html/images
              name: cleanslate-volume
            - mountPath: /var/www/html/LocalSettings.php
              name: cleanslate-localsettings
          ports:
            - containerPort: 80
      volumes:
        - name: cleanslate-volume
        - name: cleanslate-localsettings
          hostPath:
            path: /home/ubuntu/mount/LocalSettings.php
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: cleanslate-srv
  labels:
    app: cleanslate-app
spec:
  type: LoadBalancer
  externalIPs:
  - 52.12.163.222
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80                    # target port where server is listening
      nodePort: 30000     # valid port to expose is 30k UP
  selector:
    app: cleanslate-app
