k8s_dep/cleanslate-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanslate-db
spec:
  selector:
    matchLabels:
      app: cleanslate-db
  replicas: 1
  template:
    metadata:
      labels:
        app: cleanslate-db
    spec:
      serviceAccountName: xlp-mariadb
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 3000
      #   fsGroup: 2000
      containers:
        - name: cleanslate-db-container
          image: mariadb:10.3
          ports:
            - containerPort: 3306
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: cleanslate-db-storage
            - mountPath: /mnt/restore
              name: db-restore
            - mountPath: /mnt/backup
              name: db-backup
      volumes:
        - name: cleanslate-db-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
        - name: db-restore
          hostPath: 
            path: /efs/data/media
        - name: db-backup
          persistentVolumeClaim:
            claimName: backup-db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: cleanslate-db-srv
  labels:
    app: cleanslate-db
spec:
  # type: NodePort
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: cleanslate-db
  clusterIP: 10.97.75.132
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanslate-app
spec:
  selector:
    matchLabels:
      app: cleanslate-app
  replicas: 1
  template:
    metadata:
      labels:
        app: cleanslate-app
    spec:
      containers:
        - name: cleanslate-container
          image: xlp0/semanticwiki
          volumeMounts:
            - mountPath: /var/www/html/images
              name: cleanslate-volume
            - mountPath: /var/www/html/LocalSettings.php
              name: cleanslate-localsettings
            - mountPath: /var/www/html/images_restore
              name: cleanslate-restore
            - mountPath: /var/www/html/images_backup
              name: cleanslate-backup
          ports:
            - containerPort: 80
      volumes:
        - name: cleanslate-volume
          persistentVolumeClaim:
            claimName: media-pv-claim
        - name: cleanslate-localsettings
          hostPath:
            path: /home/ubuntu/mount/LocalSettings.php
            type: File
        - name: cleanslate-restore
          hostPath:
            path: /efs/mount/mediawiki/images_restore/MediaFiles
        - name: cleanslate-backup
          persistentVolumeClaim:
            claimName: backup-media-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: cleanslate-srv
  labels:
    app: cleanslate-app
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80                    # target port where server is listening
      nodePort: 30000                   # valid port to expose is 30k UP
  selector:
    app: cleanslate-app
