k8s_dep/in-db.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80


# spec:
#   rules:
#   - host: pkc-db.anindhaloka.org
#     http:
#       paths:
#       - pathType: Exact
#       - backend:
#           service:
#           - name: kubernetes-dashboard
#           - service:
#             port:
#               number: 80
