k8s_dep/ingress.yml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata: 
#   name: nginx
# spec:
#   rules:
#     - host: pkc-db.anindhaloka.org
#       http:
#         paths:
#           - backend:
#             serviceName: nginx
#             servicePort: 80
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    resource:
      apiGroup: pkc-db.anindhaloka.org
      kind: StorageBucket
      name: static-assets
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
